changed rounds min message

--- a/public/templates/game_new.html
+++ b/public/templates/game_new.html
@@ -173,8 +173,8 @@
       <div class="modal-body">
         <p>The game will be the length of rounds you specify. If you want to have an unknown number of rounds, set a
         different minimum and maximum amount, the game will have a number of rounds between those parameters.</p>
-        Minimum Rounds <input ng-model="game.rounds_min"><br />
-        Maximum Rounds <input ng-model="game.rounds_max">
+        Minimum Rounds <input type="text" ng-model="game.rounds_min"><br />
+        Maximum Rounds <input type="text" ng-model="game.rounds_max">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Back</button>
