--- a/public/templates/register.html
+++ b/public/templates/register.html
@@ -39,6 +39,12 @@
         </div>
       </div>
       <div class="form-group">
+        <label for="password-conf" class="col-sm-2 control-label">Notice</label>
+        <div class="col-sm-10">
+          <p>Please appretiate that while we will not use your email and name for any use other than managing your account for the HappyCowGame, we also cannot ensure that your details are perfectly safe while the game is still under development. If this concerns you please, use a fake email or nickname.</p>
+        </div>
+      </div>
+      <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <button ng-click="register(user)" class="btn btn-primary">Register</button>
           <a href="#/login" class="btn btn-default pull-right">Sign in</a>
