--- a/app/assets/stylesheets/classes.css
+++ b/app/assets/stylesheets/classes.css
@@ -28,7 +28,7 @@
 .die.die-triple.water { background: linear-gradient(to right, #FFFF99 67%, #5BC0DE 33%); }
 
 .die .die-value {width:100%; height:100%;}
-.die .die-value.die-value- {background-color: #D9534F;}
+/*.die .die-value.die-value- {background-color: #D9534F;}*/
 .die .die-value.die-value-1 {background-image: url('../images/dice-1.png');}
 .die .die-value.die-value-2 {background-image: url('../images/dice-2.png');}
 .die .die-value.die-value-3 {background-image: url('../images/dice-3.png');}
@@ -85,7 +85,7 @@
 }
 .big-ration-full {
   width: 100%;
-  height: 140px;
+  height: 200px;
 }
 .big-ration .ingredient {
   float:left;
@@ -93,6 +93,10 @@
   height: 100%;
   border-left: 1px solid #000;
   text-align:center;
+}
+.big-ration .ingredient div {
+  white-space: normal;
+  padding: 3px;
 }
 
 .move-position {
