--- a/public/templates/phase/4.html
+++ b/public/templates/phase/4.html
@@ -1,69 +1,13 @@
 <div  ng-controller="ReviewCtrl" class="review">
   <p>There's no actions to make. Just take a perusal of what has happened this turn. When you're ready move on to the next turn.</p>
 
-  <accordion close-others="true">
-    <accordion-group heading="Score Table" is-open="true">
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Players</th>
-            <th>Beginning Score</th>
-            <th>Ending Score</th>
-            <th>Number of Cards</th>
-            <th>Number of Rations</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="game_user in game.game_users | orderBy:id" class="player-{{game_user.id}}">
-            <td>{{game_user.user.name}}</td><td>tbc</td><td>{{game_user.score}}</td><td>tbc</td><td>tbc</td>
-          </tr>
-        </tbody>
-      </table>
-    </accordion-group>
+  <div ng-include="reviewDetailsTemplate"></div>
 
-    <accordion-group heading="Event Phase">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-4">
-            <img class="image image-full" ng-src="images/{{game.round.event.image}}" alt="Event Image">
-          </div>
-          <div class="col-md-8">
-            <h4 class="media-heading">{{game.round.event.title}} <span class="label label-default">{{game.round.event.category}}</span></h4>
-            <div ng-bind-html="game.round.event.description"></div>
-          </div>
-        </div>
-      </div>
-    </accordion-group>
-
-    <accordion-group heading="Cards Phase">
-      <dl ng-repeat="action in game.round.actions | filter:{phase:2}" class="dl-horizontal">
-        <dt>
-          <span class="label label-default player-{{action.game_user_id}}">{{action.game_user.user.name}}</span>
-          {{action.title}}
-        </dt>
-        <dd>
-          <span ng-bind-html="action.description"></span>
-        </dd>
-      </dl>
-    </accordion-group>
-
-    <accordion-group heading="Movement Phase">
-      <dl ng-repeat="action in game.round.actions | filter:{phase:3}" class="dl-horizontal">
-        <dt>
-          <span class="label label-default player-{{action.game_user_id}}">{{action.game_user.user.name}}</span>
-          {{action.title}}
-        </dt>
-        <dd>
-          <span ng-bind-html="action.description"></span>
-        </dd>
-      </dl>
-    </accordion-group>
-
-    <div class="well" style="margin-top: 10px; height: 70px;">
+  <div class="well" style="margin-top: 10px; height: 70px;">
       <button ng-if="game.canAct(4)" class="btn btn-success pull-right" ng-click="game.doneTurn()">Next Turn</button>
       <div ng-if="game.stage > 1" class="btn-group pull-right">
         <a ng-href="#/games/review/{{game.id}}" class="btn btn-info">Review Game</a>
         <a ng-href="#/games" class="btn btn-default">Games List</a>
       </div>
-    </div>
   </div>
+</div>
