group game, with fixes

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -4,11 +4,8 @@
     <h2 class="title pull-left">Login</h2>
     {{debug()}}
   </div>
-
   <ul class="list-inline pull-right">
-    <li ng-repeat="menuItem in menu">
-      <a class="btn btn-default" ng-href="{{menuItem.link}}">{{menuItem.title}}</a>
-    </li>
+    <li><a href="#/games/group" class="btn btn-default">Begin Group Game</a></li>
   </ul>
 </div>
 
