--- a/public/templates/phase/2.html
+++ b/public/templates/phase/2.html
@@ -1,7 +1,7 @@
 <div ng-controller="CardsCtrl" class="cards">
 <h2>
   Your Hand
-  <small>Total <span class="badge">{{cards.$object.length}}</span></small>
+  <small>Total <span class="badge">{{user.cards.length}}</span></small>
   <small>Actions <span class="badge">{{countActions()}}</span></small>
   <small>Ingredients <span class="badge">{{countIngredients()}}</span></small>
   <button ng-if="game.checkPhase(2)" class="btn btn-default pull-right" data-toggle="modal" data-target="#help-modal">Help!</button>
@@ -72,7 +72,7 @@
 
 <div class="well well-sm">
   <ul id="cards-list" class="list-inline">
-    <li ng-repeat="game_user_card in cards.$object" class="{{game_user_card.used ? 'used' : ''}}">
+    <li ng-repeat="game_user_card in user.cards" class="{{game_user_card.used ? 'used' : ''}}">
         <h3>
           {{game_user_card.game_card.card.title}}
         </h3>
@@ -92,10 +92,10 @@
       <div class="col-md-4">
         <p>Existing Rations</p>
         <div>
-          <div ng-repeat="ration in rations.$object" class="ration ration-popover clickable pull-left pad-10">
+          <div ng-repeat="ration in user.rations" class="ration ration-popover clickable pull-left pad-10">
             <div ng-repeat="ingredient in ration.ingredients" class="ration-ingredient {{ingredient.ingredient_cat.name}}"></div>
           </div>
-          <div ng-repeat="ration in rations.$object" class="hidden">
+          <div ng-repeat="ration in user.rations" class="hidden">
             <p>Position: {{ration.position}}</p>
             <ul>
               <li ng-repeat="ingredient in ration.ingredients">
@@ -118,11 +118,11 @@
         </div>
       </div>
       <div class="col-md-2">
-        <button ng-if="cards.$object.length <= 9" class="btn btn-success pull-right" ng-click="game.doneTurn()"
+        <button ng-if="user.cards.length <= 9" class="btn btn-success pull-right" ng-click="game.doneTurn()"
                 data-toggle="tooltip" data-placement="top" title="End card actions">
           Finished
         </button>
-        <p ng-if="cards.$object.length > 9">You must discard cards to continue.</p>
+        <p ng-if="user.cards.length > 9">You must discard cards to continue.</p>
       </div>
     </div>
   </div>
