--- a/public/templates/welcome.html
+++ b/public/templates/welcome.html
@@ -18,7 +18,7 @@
         <div class="well"><a href="#/login" class="btn btn-lg btn-block btn-primary">Log In / Sign Up</a></div>
       </div>
       <div class="col-md-6">
-        <div class="well"><button class="btn btn-lg btn-block btn-default">Begin Group Game</button></div>
+        <div class="well"><a href="#/games/group" class="btn btn-lg btn-block btn-default">Begin Group Game</a></div>
       </div>
     </div>
   </div>
