--- a/public/templates/phase/4.html
+++ b/public/templates/phase/4.html
@@ -4,7 +4,7 @@
   <div ng-include="reviewDetailsTemplate"></div>
 
   <div class="well" style="margin-top: 10px; height: 70px;">
-      <button ng-if="game.canAct(4)" class="btn btn-success pull-right" ng-click="game.doneTurn()">Next Turn</button>
+      <button ng-if="game.canAct(4)" class="btn btn-success pull-right {{finishingTurn ? 'disabled' : ''}}" ng-click="game.doneTurn()">Next Turn</button>
       <div ng-if="game.stage > 1" class="btn-group pull-right">
         <a ng-href="#/games/review/{{game.id}}" class="btn btn-info">Review Game</a>
         <a ng-href="#/games" class="btn btn-default">Games List</a>
