--- a/app/assets/stylesheets/classes.css
+++ b/app/assets/stylesheets/classes.css
@@ -107,11 +107,11 @@
   width: 20px;
   height: 20px;
   border: 2px solid #000;
-  background-color: #FFFF33;
+  background-color: #D9EDF7;
   border-radius: 5px;
 }
 .move-position-first {
-  background-color: #0066CC;
+  background-color: #1DB82F;
 }
 .move-position-final {
   background-color: #00CC00;
