--- a/public/templates/games.html
+++ b/public/templates/games.html
@@ -1,7 +1,7 @@
 <div class="bar bar-dark bar-top">
   <div class="pull-left">
     <img class="cow-icon pull-left" alt="Happy Cow icon" src="images/happycow.png" />
-    <h2 class="title pull-left">My Games</h2>
+    <h2 class="title pull-left">{{$storage.user.name}}'s Games</h2>
     {{debug()}}
   </div>
   <ul class="list-inline pull-right">
