--- a/public/templates/phase/4.html
+++ b/public/templates/phase/4.html
@@ -7,7 +7,7 @@
       <button ng-if="game.canAct(4)" class="btn btn-success pull-right {{finishingTurn ? 'disabled' : ''}}" ng-click="game.doneTurn()">Next Turn</button>
       <div ng-if="game.stage > 1" class="btn-group pull-right">
         <a ng-href="#/games/review/{{game.id}}" class="btn btn-info">Review Game</a>
-        <a ng-href="#/games" class="btn btn-default">Games List</a>
+        <a ng-href="#/{{!game.isGroupGame() ? 'games' : ''}}" class="btn btn-default">Finished</a>
       </div>
   </div>
 </div>
