--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -1,7 +1,7 @@
 <div class="bar bar-dark bar-top">
   <div class="pull-left">
     <img class="cow-icon pull-left" alt="Happy Cow icon" src="images/happycow.png" />
-    <h2 class="title pull-left">My Games</h2>
+    <h2 class="title pull-left">{{$storage.user.name}}'s Profile</h2>
     {{debug()}}
   </div>
 
@@ -12,7 +12,6 @@
 </div>
 
 <div id="profile" ng-controller="ProfileCtrl">
-  <h3>Profile</h3>
   <hr />
   <form class="form-horizontal">
     <div class="container">
