--- a/public/templates/welcome.html
+++ b/public/templates/welcome.html
@@ -15,10 +15,22 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <div class="well"><a href="#/login" class="btn btn-lg btn-block btn-primary">Log In / Sign Up</a></div>
+          <div class="well">
+            <h3>Networked Games</h3>
+            <a href="#/login">
+              <img class="image image-full" ng-src="images/network_game.png">
+            </a>
+            <p>Log In or Sign Up to play a game at your own machine, by yourself or with people at other machines.</p>
+          </div>
       </div>
       <div class="col-md-6">
-        <div class="well"><a href="#/games/group" class="btn btn-lg btn-block btn-default">Begin Group Game</a></div>
+          <div class="well">
+            <h3>Crowd Games</h3>
+            <a href="#/games/group">
+              <img class="image image-full" ng-src="images/crowd_game.png">
+            </a>
+            <p>Begin a game with people at this machine, you need to be registered first.</p>
+          </div>
       </div>
     </div>
   </div>
