--- a/app/assets/stylesheets/classes.css
+++ b/app/assets/stylesheets/classes.css
@@ -127,7 +127,7 @@
   border-radius: 5px;
   margin: 5%;
 }
-
+.image-btn {margin: 0px; height:50px;}
 .image-full { width: 90%; }
 .image-lg { width: 500px; }
 .image-md { width: 300px; }
